--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,25 +8,22 @@ display: flex;
 justify-content: center;
 align-items: center;
 justify-content: space-around;
-padding: 10px 340px;
+padding: 10px ;
+width: 100vw;
 }
 
 header img{
-    width: 250px;
+    width: 260px;
     height: 30px;
 }
 
 nav{
     font-family: Arial, Helvetica, sans-serif;
-    
-
+display: flex;
 }
 nav a{
     text-decoration: none;
     color: gray;
-    justify-content: space-evenly; 
-    align-items: center;
-    gap: 12px;
 }
 
 #Aboutus,
@@ -45,24 +42,24 @@ nav a{
 }
 
 #first_section img{
-    width: 33px;
-    height: 33px;
+    width: 35px;
+    height: 35px;
     margin-top: 55px;
 }
 
 #first_sectionHeading{
     color: #25c9ae;
     font-family: "Work Sans", Arial, sans-serif;
-    font-size: 25px;
-    font-weight: 300;
+    font-size: 35px;
+    font-weight: 350;
 }
 
 #first_sectionText{
     font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #747474;
-    font-size: 13px;
+    font-size: 16px;
     display: flex;
-    padding: 0px 200px;
+    padding: 0px 300px;
 }
 
 /* end of section 1*/
@@ -74,6 +71,7 @@ nav a{
     justify-content: center;
     align-items: center;
     gap: 25px;
+    margin-top: 50px;
 }
 
 #for_patients,
@@ -83,8 +81,8 @@ nav a{
     border-radius: 20px;
     display: flex;
     flex-direction: column;
-    width: 200px;
-    height: 230px;
+    width: 280px;
+    height: 330px;
     color: aliceblue;
     font-family: "Work Sans", Arial, sans-serif;
     padding: 20px;
@@ -93,15 +91,15 @@ nav a{
 #for_patients img,
 .for_doctors img,
 .for_clinics img{
-width: 20px;
-height: 30px;
+width: 30px;
+height: 40px;
 margin-bottom: -50px;
 }
 
 #for_patients h6,
 .for_doctors h6,
 .for_clinics h6 {
-    font-size: 25px;
+    font-size: 30px;
     font-weight: 400;
     margin-bottom: 10px;
     }
@@ -109,7 +107,7 @@ margin-bottom: -50px;
 #for_patients p,
 .for_doctors p,
 .for_clinics p {
-    font-size: 15px;
+    font-size: 20px;
     font-weight: 300;
     margin-bottom: 70px;
 }
@@ -119,9 +117,9 @@ margin-bottom: -50px;
 .for_doctors select {
     color: white;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 14px;
+    font-size: 20px;
     border: none;
-    text-decoration: underline
+    text-decoration: underline;
 }
 
 #for_patients,
@@ -178,8 +176,13 @@ margin-bottom: -50px;
 /* end of section three */
 
 .fourth_section{
-    background-color: #cffaf4;
     display: flex;
+    align-items: center;
+        justify-content: center;
+        background-color: #d0faf4;
+        margin-top: 55px;
+        padding-left: 50px;
+        margin-bottom: 30px;
 }
 
 .fourth_section h6{
@@ -194,5 +197,139 @@ margin-bottom: -50px;
     font-family:"Work Sans", Arial, sans-serif;
     font-size: 15px;
     margin-top: 30px;
-
 }
+
+.country_leader,
+.appointments,
+.patients,
+.doctors {
+ background-color: white;
+font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+width: 220px;
+height: 250px;
+margin: 20px;
+justify-content: center;
+align-items: center;
+padding: 10px;
+margin-bottom: 20px;
+border-radius: 5px;
+}
+.country_leader img,
+.appointments img,
+.patients img,
+.doctors img{
+width: 30px;
+height: 30px;
+}
+.country_leader p,
+.appointments p,
+.patients p,
+.doctors p{
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
+    ;
+font-size: 12px;
+}
+
+.country_leader h6,
+.appointments h6,
+.patients h6,
+.doctors h6{
+ font-size: 25px;
+}
+
+.country_leader,
+.patients {
+    margin-top: 50px;
+}
+
+.fifth_section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.fifth_section h6{
+    color:#00b39b;
+    font-family:"Work Sans", Arial, sans-serif;
+    font-size: 30px;
+    font-weight: 300;
+    margin: 5px;
+    margin-bottom: 20px;
+}
+.fifth_section p{
+    color:#747474;
+    font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 15px;
+    margin: 2px;
+}
+ /* end of section 5 */
+
+.sixth_section{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap; 
+    justify-content:space-around;
+    align-items: center;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #747474;
+    margin: 100px 200px;
+    
+}
+
+.sixth_section button{
+    background-color: #3d83df;
+    color: azure;
+    padding: 5px;
+    font-size: 10px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    border-radius: 5px;
+    height: 40px;
+}
+
+.button_container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 100px;
+}
+
+.sixth_section div:hover{
+    box-shadow: #747474;
+}
+
+footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+ footer h6{
+    color:#000000;
+    font-family:"Work Sans", Arial, sans-serif;
+    font-size: 30px;
+    font-weight: 300;
+    margin: 5px;
+    margin-bottom: 20px;
+ }
+
+ footer button{
+    background-color: #3d83df;
+    color: azure;
+    padding: 5px;
+    font-size: 12px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    border-radius: 5px;
+    height: 45px;
+    margin-bottom: 50px;
+ }
+ 
+ footer p{
+    color:#747474;
+    font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 12px;
+    margin: 5px;
+ }
+
+ footer a{
+    text-decoration: none;
+ }
